--- a/doc/project.conf
+++ b/doc/project.conf
@@ -33,15 +33,15 @@ script=./gtkdoc.sh
 [gtkdoc/tmpl.stamp]
 type=script
 script=./gtkdoc.sh
-depends=gtkdoc/libApp.types
+depends=$(OBJDIR)gtkdoc/libApp.types
 
 [gtkdoc/sgml.stamp]
 type=script
 script=./gtkdoc.sh
-depends=gtkdoc/tmpl.stamp
+depends=$(OBJDIR)gtkdoc/tmpl.stamp
 
 [gtkdoc/html.stamp]
 type=script
 script=./gtkdoc.sh
-depends=gtkdoc/libApp-docs.xml,gtkdoc/sgml.stamp,gtkdoc/tmpl.stamp
+depends=gtkdoc/libApp-docs.xml,$(OBJDIR)gtkdoc/sgml.stamp,$(OBJDIR)gtkdoc/tmpl.stamp
 install=
