--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,5 @@
-TARGETS	= Dummy.h appclient appmessage appserver includes lookup tests.log transport
+TARGETS	= $(OBJDIR)Dummy.h $(OBJDIR)appclient $(OBJDIR)appmessage $(OBJDIR)appserver $(OBJDIR)includes $(OBJDIR)lookup $(OBJDIR)tests.log $(OBJDIR)transport
+OBJDIR	=
 PREFIX	= /usr/local
 DESTDIR	=
 BINDIR	= $(PREFIX)/bin
@@ -18,71 +19,71 @@ INSTALL	= install
 
 all: $(TARGETS)
 
-Dummy.h: ../data/Dummy.interface
-	../data/appbroker.sh -P "$(PREFIX)" -- "Dummy.h"
+$(OBJDIR)Dummy.h: ../data/Dummy.interface
+	../data/appbroker.sh -P "$(PREFIX)" -- "$(OBJDIR)Dummy.h"
 
-appclient_OBJS = appclient.o
+appclient_OBJS = $(OBJDIR)appclient.o
 appclient_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 appclient_LDFLAGS = $(LDFLAGSF) $(LDFLAGS) ../src/libApp.a
 
-appclient: $(appclient_OBJS)
-	$(CC) -o appclient $(appclient_OBJS) $(appclient_LDFLAGS)
+$(OBJDIR)appclient: $(appclient_OBJS)
+	$(CC) -o $(OBJDIR)appclient $(appclient_OBJS) $(appclient_LDFLAGS)
 
-appmessage_OBJS = appmessage.o
+appmessage_OBJS = $(OBJDIR)appmessage.o
 appmessage_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 appmessage_LDFLAGS = $(LDFLAGSF) $(LDFLAGS) ../src/libApp.a
 
-appmessage: $(appmessage_OBJS)
-	$(CC) -o appmessage $(appmessage_OBJS) $(appmessage_LDFLAGS)
+$(OBJDIR)appmessage: $(appmessage_OBJS)
+	$(CC) -o $(OBJDIR)appmessage $(appmessage_OBJS) $(appmessage_LDFLAGS)
 
-appserver_OBJS = appserver.o
+appserver_OBJS = $(OBJDIR)appserver.o
 appserver_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 appserver_LDFLAGS = $(LDFLAGSF) $(LDFLAGS) ../src/libApp.a
 
-appserver: $(appserver_OBJS)
-	$(CC) -o appserver $(appserver_OBJS) $(appserver_LDFLAGS)
+$(OBJDIR)appserver: $(appserver_OBJS)
+	$(CC) -o $(OBJDIR)appserver $(appserver_OBJS) $(appserver_LDFLAGS)
 
-includes_OBJS = includes.o
+includes_OBJS = $(OBJDIR)includes.o
 includes_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 includes_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
 
-includes: $(includes_OBJS)
-	$(CC) -o includes $(includes_OBJS) $(includes_LDFLAGS)
+$(OBJDIR)includes: $(includes_OBJS)
+	$(CC) -o $(OBJDIR)includes $(includes_OBJS) $(includes_LDFLAGS)
 
-lookup_OBJS = lookup.o
+lookup_OBJS = $(OBJDIR)lookup.o
 lookup_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 lookup_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
 
-lookup: $(lookup_OBJS)
-	$(CC) -o lookup $(lookup_OBJS) $(lookup_LDFLAGS)
+$(OBJDIR)lookup: $(lookup_OBJS)
+	$(CC) -o $(OBJDIR)lookup $(lookup_OBJS) $(lookup_LDFLAGS)
 
-tests.log: appclient appmessage appserver includes lookup tests.sh transport ../src/transport/tcp.c ../src/transport/udp.c
-	./tests.sh -P "$(PREFIX)" -- "tests.log"
+$(OBJDIR)tests.log: appclient appmessage appserver includes lookup tests.sh transport ../src/transport/tcp.c ../src/transport/udp.c
+	./tests.sh -P "$(PREFIX)" -- "$(OBJDIR)tests.log"
 
-transport_OBJS = transport.o
+transport_OBJS = $(OBJDIR)transport.o
 transport_CFLAGS = $(CPPFLAGSF) $(CPPFLAGS) $(CFLAGSF) $(CFLAGS)
 transport_LDFLAGS = $(LDFLAGSF) $(LDFLAGS)
 
-transport: $(transport_OBJS)
-	$(CC) -o transport $(transport_OBJS) $(transport_LDFLAGS)
+$(OBJDIR)transport: $(transport_OBJS)
+	$(CC) -o $(OBJDIR)transport $(transport_OBJS) $(transport_LDFLAGS)
 
-appclient.o: appclient.c ../src/libApp.a
-	$(CC) $(appclient_CFLAGS) -c appclient.c
+$(OBJDIR)appclient.o: appclient.c ../src/libApp.a
+	$(CC) $(appclient_CFLAGS) -o $(OBJDIR)appclient.o -c appclient.c
 
-appmessage.o: appmessage.c ../src/libApp.a
-	$(CC) $(appmessage_CFLAGS) -c appmessage.c
+$(OBJDIR)appmessage.o: appmessage.c ../src/libApp.a
+	$(CC) $(appmessage_CFLAGS) -o $(OBJDIR)appmessage.o -c appmessage.c
 
-appserver.o: appserver.c ../src/libApp.a
-	$(CC) $(appserver_CFLAGS) -c appserver.c
+$(OBJDIR)appserver.o: appserver.c ../src/libApp.a
+	$(CC) $(appserver_CFLAGS) -o $(OBJDIR)appserver.o -c appserver.c
 
-includes.o: includes.c
-	$(CC) $(includes_CFLAGS) -c includes.c
+$(OBJDIR)includes.o: includes.c
+	$(CC) $(includes_CFLAGS) -o $(OBJDIR)includes.o -c includes.c
 
-lookup.o: lookup.c ../src/apptransport.h
-	$(CC) $(lookup_CFLAGS) -c lookup.c
+$(OBJDIR)lookup.o: lookup.c ../src/apptransport.h
+	$(CC) $(lookup_CFLAGS) -o $(OBJDIR)lookup.o -c lookup.c
 
-transport.o: transport.c ../src/libApp.a
-	$(CC) $(transport_CFLAGS) -c transport.c
+$(OBJDIR)transport.o: transport.c ../src/libApp.a
+	$(CC) $(transport_CFLAGS) -o $(OBJDIR)transport.o -c transport.c
 
 clean:
 	$(RM) -- $(Dummy.h_OBJS) $(appclient_OBJS) $(appmessage_OBJS) $(appserver_OBJS) $(includes_OBJS) $(lookup_OBJS) $(tests.log_OBJS) $(transport_OBJS)
