--- a/doc/Makefile
+++ b/doc/Makefile
@@ -12,7 +12,11 @@ INSTALL	= install
 all: subdirs $(TARGETS)
 
 subdirs:
-	@for i in $(SUBDIRS); do (cd "$$i" && $(MAKE)) || exit; done
+	@for i in $(SUBDIRS); do (cd "$$i" && \
+		if [ -n "$(OBJDIR)" ]; then \
+		([ -d "$(OBJDIR)$$i" ] || $(MKDIR) -- "$(OBJDIR)$$i") && \
+		$(MAKE) OBJDIR="$(OBJDIR)$$i/"; \
+		else $(MAKE); fi) || exit; done
 
 $(OBJDIR)AppBroker.1: AppBroker.xml
 	./docbook.sh -P "$(PREFIX)" -- "$(OBJDIR)AppBroker.1"
