Moved appbroker.sh to the "tools" folder

--- a/data/project.conf
+++ b/data/project.conf
@@ -1,5 +1,5 @@
 targets=libApp.pc
-dist=Makefile,Dummy.interface,appbroker.sh,libApp.pc.in,pkgconfig.sh
+dist=Makefile,Dummy.interface,libApp.pc.in,pkgconfig.sh
 
 [Dummy.interface]
 install=$(PREFIX)/etc/AppInterface
