--- a/tests/project.conf
+++ b/tests/project.conf
@@ -8,7 +8,7 @@ dist=Makefile,tests.sh
 
 [Dummy.h]
 type=script
-script=../data/appbroker.sh
+script=../tools/appbroker.sh
 depends=../data/Dummy.interface
 
 [appclient]
