--- a/tests/project.conf
+++ b/tests/project.conf
@@ -9,7 +9,7 @@ dist=Makefile,tests.sh
 [Dummy.h]
 type=script
 script=../tools/appbroker.sh
-depends=../data/Dummy.interface
+depends=../data/Dummy.interface,../tools/appbroker.sh
 
 [appclient]
 type=binary
@@ -33,7 +33,7 @@ sources=appserver.c
 ldflags=../src/libApp.a
 
 [appserver.c]
-depends=../src/libApp.a
+depends=../src/libApp.a,$(OBJDIR)Dummy.h
 
 [includes]
 type=binary
