Partial build fix for libApp

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -8,7 +8,8 @@ dist=Makefile,tests.sh
 
 [Dummy.h]
 type=script
-script=../tools/appbroker.sh
+#FIXME breaks when OBJDIR is set
+script=../tools/appbroker.sh -O APPBROKER=../tools/AppBroker
 depends=../data/Dummy.interface,../tools/appbroker.sh
 
 [appclient]
