Compile the tests with "-rdynamic" as well

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -10,7 +10,7 @@ CPPFLAGS=
 CFLAGSF	= -W `pkg-config --cflags libSystem`
 CFLAGS	= -Wall -g -O2
 LDFLAGSF= `pkg-config --libs libSystem` -lApp
-LDFLAGS	= -L../src -Wl,-rpath,../src
+LDFLAGS	= -L../src -Wl,-rpath,../src -rdynamic
 RM	= rm -f
 LN	= ln -f
 MKDIR	= mkdir -m 0755 -p
