--- a/tests/project.conf
+++ b/tests/project.conf
@@ -3,7 +3,7 @@ cppflags_force=-I ../include
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
 ldflags_force=`pkg-config --libs libSystem` -lApp
-ldflags=-L../src -Wl,-rpath,../src
+ldflags=-L../src -Wl,-rpath,../src -rdynamic
 dist=Makefile,tests.sh
 
 [Dummy.h]
