Workaround the inclusion of system headers in tests
At this point the tests are still completely broken before installing
the necessary plug-ins in the system. They can finally run in this case
though, so this is definitely an improvement.

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,10 +1,10 @@
 targets=Dummy.h,appclient,appmessage,appserver,includes,lookup,tests.log,transport
-cppflags_force=-I ../include
+cppflags_force=-I ../include -isystem .
 cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
 ldflags_force=`pkg-config --libs libSystem` -lApp
 ldflags=-L../src -Wl,-rpath,../src -rdynamic
-dist=Makefile,tests.sh
+dist=System/App.h,Makefile,tests.sh
 
 [Dummy.h]
 type=script
