Introduce the "Test" interface
This fixes the first "appclient" test already.

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -4,7 +4,7 @@ cflags_force=-W `pkg-config --cflags libSystem`
 cflags=-Wall -g -O2
 ldflags_force=`pkg-config --libs libSystem` -lApp
 ldflags=-L../src -Wl,-rpath,../src -rdynamic
-dist=System/App.h,Makefile,tests.sh
+dist=System/App.h,Makefile,Test.interface,tests.sh
 
 [Dummy.h]
 type=script
