Build with -pedantic and -fstack-protector

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,7 +1,7 @@
 targets=Dummy.h,appclient,appmessage,appserver,includes,lookup,tests.log,transport
 cppflags_force=-I ../include -isystem .
 cflags_force=-W `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2
+cflags=-Wall -g -O2 -pedantic -fstack-protector
 ldflags_force=`pkg-config --libs libSystem` -lApp
 ldflags=-L../src -Wl,-rpath,../src -rdynamic
 dist=System/App.h,Makefile,Test.interface,tests.sh
