--- a/src/project.conf
+++ b/src/project.conf
@@ -2,7 +2,7 @@ targets=libApp
 cppflags_force=-I ../include
 cppflags=-I $(PREFIX)/include
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2 -pedantic
+cflags=-Wall -g -O2 -pedantic -fstack-protector
 ldflags_force=`pkg-config --libs libSystem`
 ldflags=
 dist=Makefile,appinterface.h,appmessage.h,apptransport.h,marshall.h
