--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -2,7 +2,7 @@ targets=self,tcp,tcp4,tcp6,template,udp,udp4,udp6
 cppflags_force=-I ../../include
 cppflags=
 cflags_force=-W -fPIC `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2 -pedantic
+cflags=-Wall -g -O2 -pedantic -fstack-protector
 ldflags_force=`pkg-config --libs libSystem` -L.. -lApp
 dist=Makefile,common.h,common.c
 
