--- a/tools/project.conf
+++ b/tools/project.conf
@@ -2,7 +2,7 @@ targets=AppBroker,AppClient
 cppflags_force=-I ../include
 cppflags=
 cflags_force=-W `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2 -pedantic
+cflags=-Wall -g -O2 -pedantic -fstack-protector
 ldflags_force=-L../src `pkg-config --libs libSystem` -lApp
 ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
 dist=Makefile,appbroker.sh
