Build the tools as PIE

--- a/tools/project.conf
+++ b/tools/project.conf
@@ -2,9 +2,9 @@ targets=AppBroker,AppClient
 cppflags_force=-I ../include
 cppflags=
 cflags_force=-W `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2 -pedantic -fstack-protector
+cflags=-Wall -g -O2 -pedantic -fPIC -fstack-protector
 ldflags_force=-L../src `pkg-config --libs libSystem` -lApp
-ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib
+ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib -Wl,-pie
 dist=Makefile,appbroker.sh
 
 [AppBroker]
