Build with full SSP and RELRO by default

--- a/src/project.conf
+++ b/src/project.conf
@@ -1,10 +1,10 @@
 targets=libApp
 cppflags_force=-I ../include
 cppflags=-I $(PREFIX)/include
-cflags_force=-W -fPIC `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2 -pedantic -fstack-protector
+cflags_force=-fPIC `pkg-config --cflags libSystem`
+cflags=-W -Wall -g -O2 -pedantic -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem`
-ldflags=
+ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,appinterface.h,appmessage.h,apptransport.h,marshall.h
 
 [libApp]
