--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,9 +1,9 @@
 targets=Dummy.h,appclient,appmessage,appserver,includes,lookup,tests.log,transport
 cppflags_force=-I ../include -isystem .
-cflags_force=-W `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2 -pedantic -fstack-protector
+cflags_force=`pkg-config --cflags libSystem`
+cflags=-W -Wall -g -O2 -pedantic -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem` -lApp
-ldflags=-L../src -Wl,-rpath,../src -rdynamic
+ldflags=-L../src -Wl,-rpath,../src -Wl,-pie -Wl,-z,relro -Wl,-z,now -rdynamic
 dist=System/App.h,Makefile,Test.interface,tests.sh
 
 [Dummy.h]
