--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -1,9 +1,10 @@
 targets=self,tcp,tcp4,tcp6,template,udp,udp4,udp6
 cppflags_force=-I ../../include
 cppflags=
-cflags_force=-W -fPIC `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2 -pedantic -fstack-protector
+cflags_force=-fPIC `pkg-config --cflags libSystem`
+cflags=-W -Wall -g -O2 -pedantic -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem` -L.. -lApp
+ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.h,common.c
 
 [self]
