--- a/tools/project.conf
+++ b/tools/project.conf
@@ -1,10 +1,10 @@
 targets=AppBroker,AppClient
 cppflags_force=-I ../include
 cppflags=
-cflags_force=-W `pkg-config --cflags libSystem`
-cflags=-Wall -g -O2 -pedantic -fPIC -fstack-protector
+cflags_force=`pkg-config --cflags libSystem`
+cflags=-W -Wall -g -O2 -pedantic -fPIC -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=-L../src `pkg-config --libs libSystem` -lApp
-ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib -Wl,-pie
+ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib -Wl,-pie -Wl,-z,relro -Wl,-z,now
 dist=Makefile,appbroker.sh
 
 [AppBroker]
