Introduce the AppStatus

--- a/include/App/project.conf
+++ b/include/App/project.conf
@@ -1,4 +1,4 @@
-includes=app.h,appclient.h,appmessage.h,appserver.h,apptransport.h
+includes=app.h,appclient.h,appmessage.h,appserver.h,appstatus.h,apptransport.h
 dist=Makefile
 
 [app.h]
@@ -11,6 +11,9 @@ install=$(INCLUDEDIR)/System/App
 install=$(INCLUDEDIR)/System/App
 
 [appserver.h]
+install=$(INCLUDEDIR)/System/App
+
+[appstatus.h]
 install=$(INCLUDEDIR)/System/App
 
 [apptransport.h]
