--- a/src/project.conf
+++ b/src/project.conf
@@ -5,11 +5,11 @@ cflags_force=-fPIC `pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -pedantic -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem`
 ldflags=-Wl,-z,relro -Wl,-z,now
-dist=Makefile,appinterface.h,appmessage.h,apptransport.h,marshall.h
+dist=Makefile,appinterface.h,appmessage.h,appstatus.h,apptransport.h,marshall.h
 
 [libApp]
 type=library
-sources=appclient.c,appinterface.c,appmessage.c,appserver.c,apptransport.c,marshall.c
+sources=appclient.c,appinterface.c,appmessage.c,appserver.c,appstatus.c,apptransport.c,marshall.c
 ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
@@ -17,10 +17,13 @@ install=$(LIBDIR)
 depends=appinterface.h,../include/App/appclient.h
 
 [appinterface.c]
-depends=../include/App/appserver.h,marshall.h,../config.h
+depends=../include/App/appserver.h,appstatus.h,marshall.h,../config.h
 
 [appmessage.c]
 depends=../include/App/appmessage.h,appmessage.h
+
+[appstatus.c]
+depends=../include/App/appstatus.h,appstatus.h
 
 [apptransport.c]
 depends=../include/App/appmessage.h,../config.h
