Fix some issues with OBJDIR

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -8,32 +8,32 @@ dist=System/App.h,Makefile,Test.interface,tests.sh
 
 [Dummy.h]
 type=script
-script=../tools/appbroker.sh -O APPBROKER=../tools/AppBroker
+script=../tools/appbroker.sh -O APPBROKER=$(OBJDIR)../tools/AppBroker
 depends=../data/Dummy.interface,../tools/appbroker.sh
 
 [appclient]
 type=binary
 sources=appclient.c
-ldflags=../src/libApp.a
+ldflags=$(OBJDIR)../src/libApp.a
 
 [appclient.c]
-depends=../src/libApp.a
+depends=$(OBJDIR)../src/libApp.a
 
 [appmessage]
 type=binary
 sources=appmessage.c
-ldflags=../src/libApp.a
+ldflags=$(OBJDIR)../src/libApp.a
 
 [appmessage.c]
-depends=../src/libApp.a
+depends=$(OBJDIR)../src/libApp.a
 
 [appserver]
 type=binary
 sources=appserver.c
-ldflags=../src/libApp.a
+ldflags=$(OBJDIR)../src/libApp.a
 
 [appserver.c]
-depends=../src/libApp.a,$(OBJDIR)Dummy.h
+depends=$(OBJDIR)../src/libApp.a,$(OBJDIR)Dummy.h
 
 [includes]
 type=binary
@@ -49,7 +49,7 @@ depends=../src/apptransport.h
 [tests.log]
 type=script
 script=./tests.sh
-depends=appclient,appmessage,appserver,includes,lookup,tests.sh,transport,../src/transport/tcp.c,../src/transport/udp.c
+depends=$(OBJDIR)appclient$(EXEEXT),$(OBJDIR)appmessage$(EXEEXT),$(OBJDIR)appserver$(EXEEXT),$(OBJDIR)includes$(EXEEXT),$(OBJDIR)lookup$(EXEEXT),tests.sh,$(OBJDIR)transport$(EXEEXT),../src/transport/tcp.c,../src/transport/udp.c
 
 [transport]
 type=binary
