More portable build as PIE

--- a/tools/project.conf
+++ b/tools/project.conf
@@ -4,7 +4,7 @@ cppflags=
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -pedantic -fPIC -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=-L../src `pkg-config --libs libSystem` -lApp
-ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib -Wl,-pie -Wl,-z,relro -Wl,-z,now
+ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib -pie -Wl,-z,relro -Wl,-z,now
 dist=Makefile,appbroker.sh
 
 [AppBroker]
