Partial fix for "make distcheck"

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -3,7 +3,7 @@ cppflags_force=-I ../include -isystem .
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -pedantic -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem` -lApp
-ldflags=-L../src -Wl,-rpath,../src -pie -Wl,-z,relro -Wl,-z,now -rdynamic
+ldflags=-L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -pie -Wl,-z,relro -Wl,-z,now -rdynamic
 dist=System/App.h,Makefile,Test.interface,tests.sh
 
 [Dummy.h]
