Add a test for the pkg-config file

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -4,7 +4,7 @@ cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -pedantic -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem` -lApp
 ldflags=-L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -pie -Wl,-z,relro -Wl,-z,now -rdynamic
-dist=System/App.h,Makefile,Test.interface,tests.sh
+dist=System/App.h,Makefile,Test.interface,pkgconfig.sh,tests.sh
 
 [Dummy.h]
 type=script
@@ -49,7 +49,7 @@ depends=../src/apptransport.h
 [tests.log]
 type=script
 script=./tests.sh
-depends=$(OBJDIR)appclient$(EXEEXT),$(OBJDIR)appmessage$(EXEEXT),$(OBJDIR)appserver$(EXEEXT),$(OBJDIR)includes$(EXEEXT),$(OBJDIR)lookup$(EXEEXT),tests.sh,$(OBJDIR)transport$(EXEEXT),../src/transport/tcp.c,../src/transport/udp.c
+depends=$(OBJDIR)appclient$(EXEEXT),$(OBJDIR)appmessage$(EXEEXT),$(OBJDIR)appserver$(EXEEXT),$(OBJDIR)includes$(EXEEXT),$(OBJDIR)lookup$(EXEEXT),pkgconfig.sh,tests.sh,$(OBJDIR)transport$(EXEEXT),../src/transport/tcp.c,../src/transport/udp.c
 
 [transport]
 type=binary
