Use libMarshall for callbacks

--- a/src/project.conf
+++ b/src/project.conf
@@ -1,15 +1,15 @@
 targets=libApp
 cppflags_force=-I ../include
 cppflags=-I $(PREFIX)/include
-cflags_force=-fPIC `pkg-config --cflags libSystem`
+cflags_force=-fPIC `pkg-config --cflags libSystem libMarshall`
 cflags=-W -Wall -g -O2 -pedantic -D_FORTIFY_SOURCE=2 -fstack-protector-all
-ldflags_force=`pkg-config --libs libSystem`
+ldflags_force=`pkg-config --libs libSystem libMarshall`
 ldflags=-Wl,-z,relro -Wl,-z,now
-dist=Makefile,appinterface.h,appmessage.h,appstatus.h,apptransport.h,marshall.h
+dist=Makefile,appinterface.h,appmessage.h,appstatus.h,apptransport.h
 
 [libApp]
 type=library
-sources=appclient.c,appinterface.c,appmessage.c,appserver.c,appstatus.c,apptransport.c,marshall.c
+sources=appclient.c,appinterface.c,appmessage.c,appserver.c,appstatus.c,apptransport.c
 ldflags=-lsocket -lws2_32
 install=$(LIBDIR)
 
@@ -17,7 +17,7 @@ install=$(LIBDIR)
 depends=appinterface.h,../include/App/appclient.h
 
 [appinterface.c]
-depends=../include/App/appserver.h,appstatus.h,marshall.h,../config.h
+depends=../include/App/appserver.h,appstatus.h,../config.h
 
 [appmessage.c]
 depends=../include/App/appmessage.h,appmessage.h
@@ -33,6 +33,3 @@ depends=appinterface.h,../include/App/appserver.h,../config.h
 
 [apptransport.c]
 depends=apptransport.h,../include/App/apptransport.h,../config.h
-
-[marshall.c]
-depends=marshall.h
