--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,9 +1,9 @@
 targets=Dummy.h,appclient,appmessage,appserver,includes,lookup,tests.log,transport
-cppflags_force=-I ../include -isystem .
+cppflags_force=-I ../include
 cflags_force=`pkg-config --cflags libSystem`
-cflags=-W -Wall -g -O2 -pedantic -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
-ldflags_force=`pkg-config --libs libSystem` -lApp
-ldflags=-L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -pie -Wl,-z,relro -Wl,-z,now -rdynamic
+cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
+ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -lApp
+ldflags=-pie -Wl,-z,relro -Wl,-z,now -rdynamic
 dist=System/App.h,appbroker.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,tests.sh
 
 [Dummy.h]
