--- a/tools/project.conf
+++ b/tools/project.conf
@@ -2,9 +2,9 @@ targets=AppBroker,AppClient
 cppflags_force=-I ../include
 cppflags=
 cflags_force=`pkg-config --cflags libSystem libMarshall`
-cflags=-W -Wall -g -O2 -pedantic -fPIC -D_FORTIFY_SOURCE=2 -fstack-protector-all
-ldflags_force=-L../src `pkg-config --libs libSystem libMarshall` -lApp
-ldflags=-L$(PREFIX)/lib -Wl,-rpath,$(PREFIX)/lib -pie -Wl,-z,relro -Wl,-z,now
+cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
+ldflags_force=-L$(OBJDIR)../src `pkg-config --libs libSystem libMarshall` -lApp
+ldflags=-pie -Wl,-z,relro -Wl,-z,now
 dist=Makefile,appbroker.sh
 
 [AppBroker]
