No longer require AppBroker(1) to be installed
The tests still do not pass without installing libApp though.

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,5 +1,5 @@
 targets=Dummy.h,appclient,appmessage,appserver,includes,lookup,tests.log,transport
-cppflags_force=-I ../include
+cppflags_force=-I ../include -isystem .
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -lApp
