Import a "appinterface" test

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,4 +1,4 @@
-targets=Dummy.h,appclient,appmessage,appserver,includes,lookup,tests.log,transport
+targets=Dummy.h,appclient,appinterface,appmessage,appserver,includes,lookup,tests.log,transport
 cppflags_force=-I ../include -isystem .
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
@@ -17,6 +17,14 @@ sources=appclient.c
 ldflags=$(OBJDIR)../src/libApp.a
 
 [appclient.c]
+depends=$(OBJDIR)../src/libApp.a
+
+[appinterface]
+type=binary
+sources=appinterface.c
+ldflags=$(OBJDIR)../src/libApp.a
+
+[appinterface.c]
 depends=$(OBJDIR)../src/libApp.a
 
 [appmessage]
