--- a/tests/project.conf
+++ b/tests/project.conf
@@ -8,7 +8,8 @@ dist=System/App.h,appbroker.sh,Makefile,Test.expected,Test.interface,pkgconfig.s
 
 [Dummy.h]
 type=script
-script=../tools/appbroker.sh -O APPBROKER=$(OBJDIR)../tools/AppBroker
+script=../tools/appbroker.sh
+flags=-O APPBROKER=$(OBJDIR)../tools/AppBroker
 depends=../data/Dummy.interface,../tools/appbroker.sh
 
 [appclient]
