Look for libraries in $(OBJDIR)

--- a/src/transport/project.conf
+++ b/src/transport/project.conf
@@ -3,7 +3,7 @@ cppflags_force=-I ../../include
 cppflags=
 cflags_force=-fPIC `pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -D_FORTIFY_SOURCE=2 -fstack-protector-all
-ldflags_force=`pkg-config --libs libSystem` -L.. -lApp
+ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR).. -lApp
 ldflags=-Wl,-z,relro -Wl,-z,now
 dist=Makefile,common.h,common.c
 
