Import the "fixme.sh" test

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,10 +1,10 @@
-targets=Dummy.h,appclient,appinterface,appmessage,appserver,includes,lookup,tests.log,transport
+targets=Dummy.h,appclient,appinterface,appmessage,appserver,fixme.log,includes,lookup,tests.log,transport
 cppflags_force=-I../include -I$(OBJDIR).
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -lApp
 ldflags=-pie -Wl,-z,relro -Wl,-z,now -rdynamic
-dist=System/App.h,appbroker.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,tests.sh
+dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,tests.sh
 
 [Dummy.h]
 type=script
@@ -43,6 +43,11 @@ ldflags=$(OBJDIR)../src/libApp.a
 
 [appserver.c]
 depends=$(OBJDIR)../src/libApp.a,$(OBJDIR)Dummy.h
+
+[fixme.log]
+type=script
+script=./fixme.sh
+depends=fixme.sh,$(OBJDIR)../src/libApp.a
 
 [includes]
 type=binary
