Make the "fixme" test optional

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -47,7 +47,8 @@ depends=$(OBJDIR)../src/libApp.a,$(OBJDIR)Dummy.h
 [fixme.log]
 type=script
 script=./fixme.sh
-depends=fixme.sh,$(OBJDIR)../src/libApp.a
+depends=$(OBJDIR)../src/libApp.a,fixme.sh
+enabled=0
 
 [includes]
 type=binary
