--- a/project.conf
+++ b/project.conf
@@ -4,3 +4,10 @@ config=h,sh
 dist=Makefile,COPYING,README.md,config.h,config.sh
 
 subdirs=data,doc,include,src,src/transport,tools,tests
+targets=tests
+
+#targets
+[tests]
+type=command
+command=cd tests && (if [ -n "$(OBJDIR)" ]; then $(MAKE) OBJDIR="$(OBJDIR)tests/" "$(OBJDIR)tests/fixme.log"; else $(MAKE) fixme.log; fi)
+phony=1
