--- a/project.conf
+++ b/project.conf
@@ -10,4 +10,5 @@ targets=tests
 [tests]
 type=command
 command=cd tests && (if [ -n "$(OBJDIR)" ]; then $(MAKE) OBJDIR="$(OBJDIR)tests/" "$(OBJDIR)tests/fixme.log"; else $(MAKE) fixme.log; fi)
+enabled=0
 phony=1
