Use $(EXEEXT) for executable binaries

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -9,7 +9,7 @@ dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pk
 [Dummy.h]
 type=script
 script=../tools/appbroker.sh
-flags=-O APPBROKER=$(OBJDIR)../tools/AppBroker
+flags=-O APPBROKER=$(OBJDIR)../tools/AppBroker$(EXEEXT)
 depends=../data/Dummy.interface,../tools/appbroker.sh
 
 [appclient]
