--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,10 +1,10 @@
-targets=Dummy.h,appclient,appinterface,appmessage,appserver,fixme.log,includes,lookup,tests.log,transport
+targets=Dummy.h,appclient,appinterface,appmessage,appserver,fixme.log,includes,lookup,shlint.log,tests.log,transport
 cppflags_force=-I../include -I$(OBJDIR).
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDIR)../src -lApp
 ldflags=-pie -Wl,-z,relro -Wl,-z,now -rdynamic
-dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,tests.sh
+dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,shlint.sh,tests.sh
 
 [Dummy.h]
 type=script
@@ -60,6 +60,11 @@ sources=lookup.c
 
 [lookup.c]
 depends=../src/apptransport.h
+
+[shlint.log]
+type=script
+script=./shlint.sh
+depends=$(OBJDIR)../src/libApp.a,shlint.sh
 
 [tests.log]
 type=script
