Sort the targets and source files separately

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -6,6 +6,7 @@ ldflags_force=`pkg-config --libs libSystem` -L$(OBJDIR)../src -Wl,-rpath,$(OBJDI
 ldflags=-pie -Wl,-z,relro -Wl,-z,now -rdynamic
 dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,shlint.sh,tests.sh
 
+#targets
 [Dummy.h]
 type=script
 script=../tools/appbroker.sh
@@ -17,32 +18,20 @@ type=binary
 sources=appclient.c
 ldflags=$(OBJDIR)../src/libApp.a
 
-[appclient.c]
-depends=$(OBJDIR)../src/libApp.a
-
 [appinterface]
 type=binary
 sources=appinterface.c
 ldflags=$(OBJDIR)../src/libApp.a
-
-[appinterface.c]
-depends=$(OBJDIR)../src/libApp.a
 
 [appmessage]
 type=binary
 sources=appmessage.c
 ldflags=$(OBJDIR)../src/libApp.a
 
-[appmessage.c]
-depends=$(OBJDIR)../src/libApp.a
-
 [appserver]
 type=binary
 sources=appserver.c
 ldflags=$(OBJDIR)../src/libApp.a
-
-[appserver.c]
-depends=$(OBJDIR)../src/libApp.a,$(OBJDIR)Dummy.h
 
 [fixme.log]
 type=script
@@ -58,9 +47,6 @@ sources=includes.c
 type=binary
 sources=lookup.c
 
-[lookup.c]
-depends=../src/apptransport.h
-
 [shlint.log]
 type=script
 script=./shlint.sh
@@ -74,6 +60,22 @@ depends=Test.expected,Test.interface,$(OBJDIR)../tools/AppBroker$(EXEEXT),appbro
 [transport]
 type=binary
 sources=transport.c
+
+#sources
+[appclient.c]
+depends=$(OBJDIR)../src/libApp.a
+
+[appinterface.c]
+depends=$(OBJDIR)../src/libApp.a
+
+[appmessage.c]
+depends=$(OBJDIR)../src/libApp.a
+
+[appserver.c]
+depends=$(OBJDIR)../src/libApp.a,$(OBJDIR)Dummy.h
+
+[lookup.c]
+depends=../src/apptransport.h
 
 [transport.c]
 depends=$(OBJDIR)../src/libApp.a
