Let the tests work without installing libApp first

--- a/tests/project.conf
+++ b/tests/project.conf
@@ -1,4 +1,4 @@
-targets=Dummy.h,appclient,appinterface,appmessage,appserver,fixme.log,includes,lookup,shlint.log,tests.log,transport
+targets=AppBroker,Dummy.h,appclient,appinterface,appmessage,appserver,fixme.log,includes,lookup,shlint.log,tests.log,transport
 cppflags_force=-I../include -I$(OBJDIR).
 cflags_force=`pkg-config --cflags libSystem`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
@@ -7,11 +7,15 @@ ldflags=-pie -Wl,-z,relro -Wl,-z,now -rdynamic
 dist=System/App.h,appbroker.sh,fixme.sh,Makefile,Test.expected,Test.interface,pkgconfig.sh,shlint.sh,tests.sh
 
 #targets
+[AppBroker]
+type=binary
+sources=appbroker.c
+ldflags=$(OBJDIR)../src/libApp.a
+
 [Dummy.h]
 type=script
-script=../tools/appbroker.sh
-flags=-O APPBROKER=$(OBJDIR)../tools/AppBroker$(EXEEXT)
-depends=../data/Dummy.interface,../tools/appbroker.sh
+script=./appbroker.sh
+depends=../data/Dummy.interface,appbroker.sh
 
 [appclient]
 type=binary
@@ -62,6 +66,9 @@ type=binary
 sources=transport.c
 
 #sources
+[appbroker.c]
+depends=../tools/appbroker.c
+
 [appclient.c]
 depends=$(OBJDIR)../src/libApp.a
 
