--- a/tools/project.conf
+++ b/tools/project.conf
@@ -5,8 +5,9 @@ cflags_force=`pkg-config --cflags libSystem libMarshall`
 cflags=-W -Wall -g -O2 -fPIE -D_FORTIFY_SOURCE=2 -fstack-protector-all
 ldflags_force=-L$(OBJDIR)../src `pkg-config --libs libSystem libMarshall` -lApp
 ldflags=-pie -Wl,-z,relro -Wl,-z,now
-dist=Makefile,appbroker.sh
+dist=Makefile
 
+#targets
 [AppBroker]
 type=binary
 sources=appbroker.c
